[gd_scene load_steps=2 format=3 uid="uid://dpx677c83doct"]

[ext_resource type="Script" path="res://tests/samples/execute_command.gd" id="1_4uow7"]

[node name="ExecuteCommand" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4uow7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 87.0
offset_right = 520.0
offset_bottom = 189.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Set executable command:"

[node name="Command" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "retroarch -L /usr/lib/libretro/nestopia_libretro.so"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Set file path:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FileSelectField" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(280, 30)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load file"

[node name="LaunchButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Output:"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "d
f
f
f
f
f
f
ff
f
f
f
f
f
"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(1049, 159)
access = 2
show_hidden_files = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/LaunchButton" to="." method="_on_LaunchButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
